# Delaunay-refinement

./: CMakeLists.txt  README.md
data/: coast_LA.poly  hex.poly  tutte.poly
src/geometry/: CMakeLists.txt  delaunay.hh  distance.hh  math_def.hh  pred2D.hh  segment.hh  triangle.hh  vector_n.hh
src/mesh/: CMakeLists.txt  mesh.cc  mesh.hh  mesh.io.cc  mesh.io.hh  property.hh  topology.cc  topology.hh
src/mesher/: CMakeLists.txt  delaunay.cc  mesher.hh  refine.cc  search.cc  search.hh  triangulate.cc
test/mesher/: CMakeLists.txt  main.cc  main.hh
